--- a/index.html
+++ b/index.html
@@ -5,28 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>로또 번호 추천</title>
   <style>
-    :root { color-scheme: light; }
+    :root {
+      color-scheme: light;
+      --bg-1: #fff7d6;
+      --bg-2: #e9f9ff;
+      --bg-3: #ffffff;
+      --bg-4: #fff8e7;
+      --text-color: #0f172a;
+      --text-sub: rgba(15, 23, 42, 0.75);
+      --app-bg: rgba(255, 255, 255, 0.92);
+      --border-color: rgba(15, 23, 42, 0.12);
+      --shadow-color: rgba(15, 23, 42, 0.14);
+      --header-bg: linear-gradient(90deg, #fff1b8, #e7fbff);
+      --logo-text: #0f172a;
+      --hero-bg: linear-gradient(135deg, rgba(255, 231, 122, 0.55), rgba(209, 250, 229, 0.35));
+      --card-bg: #ffffff;
+      --card-shadow: rgba(15, 23, 42, 0.08);
+      --btn-bg: linear-gradient(180deg, #ffd84d, #ffbf1f);
+      --btn-text: #0f172a;
+      --btn-shadow: rgba(255, 193, 7, 0.28);
+      --badge-bg: rgba(255, 193, 7, 0.22);
+      --badge-border: rgba(255, 193, 7, 0.35);
+      --ball-border: rgba(15, 23, 42, 0.10);
+      --ball-shadow: rgba(15, 23, 42, 0.08);
+      --ball-inset: rgba(255,255,255,0.7);
+    }
+
+    [data-theme="dark"] {
+      color-scheme: dark;
+      --bg-1: #0f172a;
+      --bg-2: #1e293b;
+      --bg-3: #020617;
+      --bg-4: #0f172a;
+      --text-color: #f1f5f9;
+      --text-sub: rgba(241, 245, 249, 0.65);
+      --app-bg: rgba(30, 41, 59, 0.85);
+      --border-color: rgba(255, 255, 255, 0.1);
+      --shadow-color: rgba(0, 0, 0, 0.4);
+      --header-bg: linear-gradient(90deg, #334155, #1e293b);
+      --logo-text: #0f172a;
+      --hero-bg: linear-gradient(135deg, rgba(255, 231, 122, 0.15), rgba(209, 250, 229, 0.1));
+      --card-bg: #1e293b;
+      --card-shadow: rgba(0, 0, 0, 0.2);
+      --btn-bg: linear-gradient(180deg, #ffd84d, #ffbf1f);
+      --btn-text: #0f172a;
+      --btn-shadow: rgba(255, 193, 7, 0.15);
+      --badge-bg: rgba(255, 193, 7, 0.15);
+      --badge-border: rgba(255, 193, 7, 0.25);
+      --ball-border: rgba(255, 255, 255, 0.15);
+      --ball-shadow: rgba(0, 0, 0, 0.3);
+      --ball-inset: rgba(255,255,255,0.2);
+    }
+
     * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans KR", Arial, sans-serif;
-      background: radial-gradient(900px 500px at 20% 10%, #fff7d6, transparent 70%),
-                  radial-gradient(800px 500px at 80% 0%, #e9f9ff, transparent 65%),
-                  linear-gradient(180deg, #ffffff, #fff8e7);
+      background: radial-gradient(900px 500px at 20% 10%, var(--bg-1), transparent 70%),
+                  radial-gradient(800px 500px at 80% 0%, var(--bg-2), transparent 65%),
+                  linear-gradient(180deg, var(--bg-3), var(--bg-4));
       min-height: 100vh;
       display: grid;
       place-items: center;
       padding: 24px;
-      color: #0f172a;
+      color: var(--text-color);
+      transition: background 0.3s ease, color 0.3s ease;
     }
 
     .app {
       width: min(860px, 100%);
       border-radius: 20px;
-      background: rgba(255, 255, 255, 0.92);
-      border: 1px solid rgba(15, 23, 42, 0.12);
-      box-shadow: 0 18px 60px rgba(15, 23, 42, 0.14);
+      background: var(--app-bg);
+      border: 1px solid var(--border-color);
+      box-shadow: 0 18px 60px var(--shadow-color);
       overflow: hidden;
+      transition: background 0.3s ease, border-color 0.3s ease;
     }
 
     header {
@@ -35,8 +88,9 @@
       align-items: center;
       justify-content: space-between;
       gap: 12px;
-      background: linear-gradient(90deg, #fff1b8, #e7fbff);
-      border-bottom: 1px solid rgba(15, 23, 42, 0.10);
+      background: var(--header-bg);
+      border-bottom: 1px solid var(--border-color);
+      transition: background 0.3s ease, border-color 0.3s ease;
     }
 
     .brand {
@@ -60,7 +114,7 @@
     .logo span {
       font-weight: 900;
       font-size: 14px;
-      color: #0f172a;
+      color: var(--logo-text);
       letter-spacing: -0.5px;
     }
 
@@ -76,7 +130,19 @@
     .sub {
       margin: 2px 0 0;
       font-size: 12px;
-      opacity: 0.75;
+      color: var(--text-sub);
+    }
+
+    .theme-toggle {
+      background: none;
+      border: 1px solid var(--border-color);
+      padding: 8px 12px;
+      border-radius: 12px;
+      cursor: pointer;
+      color: var(--text-color);
+      font-size: 13px;
+      font-weight: 600;
+      box-shadow: none;
     }
 
     main {
@@ -101,8 +167,9 @@
       align-items: center;
       padding: 18px;
       border-radius: 18px;
-      background: linear-gradient(135deg, rgba(255, 231, 122, 0.55), rgba(209, 250, 229, 0.35));
-      border: 1px solid rgba(15, 23, 42, 0.10);
+      background: var(--hero-bg);
+      border: 1px solid var(--border-color);
+      transition: background 0.3s ease;
     }
 
     .hero h2 {
@@ -113,7 +180,7 @@
     .hero p {
       margin: 0;
       font-size: 13px;
-      opacity: 0.8;
+      color: var(--text-sub);
       line-height: 1.55;
     }
 
@@ -130,9 +197,9 @@
       padding: 12px 16px;
       font-weight: 800;
       font-size: 14px;
-      color: #0f172a;
-      background: linear-gradient(180deg, #ffd84d, #ffbf1f);
-      box-shadow: 0 10px 22px rgba(255, 193, 7, 0.28);
+      color: var(--btn-text);
+      background: var(--btn-bg);
+      box-shadow: 0 10px 22px var(--btn-shadow);
       transition: transform 0.06s ease, filter 0.2s ease;
     }
     button:hover { filter: brightness(1.03); }
@@ -140,9 +207,10 @@
 
     button.secondary {
       background: transparent;
-      border: 1px solid rgba(15, 23, 42, 0.16);
+      border: 1px solid var(--border-color);
       box-shadow: none;
       font-weight: 700;
+      color: var(--text-color);
     }
 
     .grid {
@@ -154,9 +222,9 @@
     .resultCard {
       padding: 14px 14px 12px;
       border-radius: 16px;
-      background: #ffffff;
-      border: 1px solid rgba(15, 23, 42, 0.10);
-      box-shadow: 0 10px 26px rgba(15, 23, 42, 0.08);
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      box-shadow: 0 10px 26px var(--card-shadow);
     }
 
     .resultHead {
@@ -172,8 +240,8 @@
       font-weight: 800;
       padding: 6px 10px;
       border-radius: 999px;
-      background: rgba(255, 193, 7, 0.22);
-      border: 1px solid rgba(255, 193, 7, 0.35);
+      background: var(--badge-bg);
+      border: 1px solid var(--badge-border);
     }
 
     .balls {
@@ -190,9 +258,10 @@
       display: grid;
       place-items: center;
       font-weight: 900;
-      border: 1px solid rgba(15, 23, 42, 0.10);
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.7),
-                  0 8px 14px rgba(15, 23, 42, 0.08);
+      color: #0f172a; /* 번호는 항상 잘 보이게 어두운 색 */
+      border: 1px solid var(--ball-border);
+      box-shadow: inset 0 1px 0 var(--ball-inset),
+                  0 8px 14px var(--ball-shadow);
       user-select: none;
     }
 
@@ -207,12 +276,13 @@
       font-weight: 900;
       opacity: 0.7;
       margin: 0 2px;
+      color: var(--text-color);
     }
 
     .meta {
       margin-top: 14px;
       font-size: 12px;
-      opacity: 0.75;
+      color: var(--text-sub);
     }
 
     .toolbar {
@@ -243,11 +313,14 @@
           <div class="sub">버튼 한 번으로 5게임 랜덤 추천</div>
         </div>
       </div>
+      <button id="btnTheme" class="theme-toggle" type="button" aria-label="테마 변경">
+        🌞 / 🌙
+      </button>
       <span class="sr-only" id="announce" aria-live="polite"></span>
     </header>
 
     <main>
-      <!-- 1) 메인 화면: 버튼만 보이게 -->
+      <!-- 1) 메인 화면 -->
       <section id="screenMain" class="screen active" aria-label="메인 화면">
         <div class="hero">
           <div>
@@ -264,7 +337,7 @@
         </div>
       </section>
 
-      <!-- 2) 결과 화면: 5개 결과 보여주기 -->
+      <!-- 2) 결과 화면 -->
       <section id="screenResult" class="screen" aria-label="결과 화면">
         <div class="toolbar">
           <button id="btnAgain" type="button">다시 추천받기</button>
@@ -292,8 +365,30 @@
     const resultsEl = document.getElementById('results');
     const metaEl = document.getElementById('meta');
     const announce = document.getElementById('announce');
+    const btnTheme = document.getElementById('btnTheme');
 
     let latest = { games: [], withBonus: true };
+
+    // --- Theme Logic ---
+    function initTheme() {
+      const saved = localStorage.getItem('theme');
+      if (saved === 'dark') {
+        document.documentElement.setAttribute('data-theme', 'dark');
+      } else {
+        document.documentElement.setAttribute('data-theme', 'light');
+      }
+    }
+
+    function toggleTheme() {
+      const current = document.documentElement.getAttribute('data-theme');
+      const next = current === 'dark' ? 'light' : 'dark';
+      document.documentElement.setAttribute('data-theme', next);
+      localStorage.setItem('theme', next);
+    }
+
+    btnTheme.addEventListener('click', toggleTheme);
+    initTheme();
+    // -------------------
 
     function randomInt(min, max) {
       return Math.floor(Math.random() * (max - min + 1)) + min;
