--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>오늘 뭐 먹지?</title>
+  <meta name="google-adsense-account" content="ca-pub-3631483316077834">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3631483316077834"
+     crossorigin="anonymous"></script>
   <style>
     :root {
       color-scheme: light;
