--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="오늘 점심 뭐 먹지? 저녁 메뉴 추천이 필요할 때! AI가 제안하는 한식, 중식, 일식, 양식 랜덤 메뉴 추천기. 결정 장애 해결을 위한 최고의 선택 도구입니다.">
+  <meta name="keywords" content="점심메뉴추천, 저녁메뉴추천, 오늘뭐먹지, 랜덤메뉴, 음식추천, AI메뉴추천, 결정장애">
   <title>오늘 뭐 먹지?</title>
   <meta name="google-adsense-account" content="ca-pub-3631483316077834">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3631483316077834"
@@ -394,6 +396,39 @@
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </section>
+
+    <!-- SEO & Static Content (For AdSense High Quality Content) -->
+    <section style="padding: 30px 24px; border-top: 1px solid var(--border-color); background: var(--card-bg);">
+      <h3 style="font-size: 18px; margin-bottom: 16px;">📋 제공되는 메뉴 카테고리</h3>
+      <div style="display: grid; gap: 20px; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); font-size: 14px; line-height: 1.6;">
+        <div>
+          <strong style="display:block; margin-bottom: 6px; color: var(--text-color);">🍚 든든한 한식</strong>
+          <p style="margin:0; color: var(--text-sub);">김치찌개, 된장찌개, 비빔밥, 불고기, 삼겹살 등 한국인의 소울 푸드를 추천해드립니다.</p>
+        </div>
+        <div>
+          <strong style="display:block; margin-bottom: 6px; color: var(--text-color);">🍜 얼큰한 중식</strong>
+          <p style="margin:0; color: var(--text-sub);">짜장면, 짬뽕, 탕수육, 마라탕 등 입맛을 돋우는 중화요리 메뉴가 준비되어 있습니다.</p>
+        </div>
+        <div>
+          <strong style="display:block; margin-bottom: 6px; color: var(--text-color);">🍣 깔끔한 일식</strong>
+          <p style="margin:0; color: var(--text-sub);">초밥, 돈까스, 우동, 라멘 등 정갈하고 깔끔한 맛을 원하신다면 일식을 선택해보세요.</p>
+        </div>
+        <div>
+          <strong style="display:block; margin-bottom: 6px; color: var(--text-color);">🍕 풍성한 양식/분식</strong>
+          <p style="margin:0; color: var(--text-sub);">피자, 파스타, 햄버거, 떡볶이, 치킨 등 특별한 날이나 간편한 식사를 위한 추천입니다.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer style="padding: 24px; text-align: center; border-top: 1px solid var(--border-color); font-size: 12px; color: var(--text-sub);">
+      <p style="margin-bottom: 10px;">&copy; 2026 오늘 뭐 먹지? All rights reserved.</p>
+      <div>
+        <a href="privacy.html" style="color: var(--text-color); text-decoration: none; font-weight: 600;">개인정보처리방침</a>
+        <span style="margin: 0 8px; opacity: 0.3;">|</span>
+        <a href="#" onclick="alert('준비 중입니다.'); return false;" style="color: var(--text-color); text-decoration: none;">이용약관</a>
+      </div>
+    </footer>
   </div>
 
   <script>
