Add Google Analytics tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="ko">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9ZX2WEXDZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-M9ZX2WEXDZ');
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="오늘 점심 뭐 먹지? 저녁 메뉴 추천이 필요할 때! AI가 제안하는 한식, 중식, 일식, 양식 랜덤 메뉴 추천기. 결정 장애 해결을 위한 최고의 선택 도구입니다.">
