--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
     gtag('config', 'G-M9ZX2WEXDZ');
   </script>
+  <!-- MS Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "v2s72h0xgo");
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="오늘 점심 뭐 먹지? 저녁 메뉴 추천이 필요할 때! AI가 제안하는 한식, 중식, 일식, 양식 랜덤 메뉴 추천기. 결정 장애 해결을 위한 최고의 선택 도구입니다.">
