--- a/privacy.html
+++ b/privacy.html
@@ -19,6 +19,7 @@
       })(window, document, "clarity", "script", "v2s72h0xgo");
     </script>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인정보처리방침 - 오늘 뭐 먹지?</title>
     <style>
