Enhance SEO: Add Meta tags, OG, JSON-LD, robots.txt, and sitemap.xml

--- a/privacy.html
+++ b/privacy.html
@@ -21,6 +21,11 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://gyeongmin100.github.io/product-builder-lecture/privacy.html" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gyeongmin100.github.io/product-builder-lecture/privacy.html">
+    <meta property="og:title" content="개인정보처리방침 - 오늘 뭐 먹지?">
+    <meta name="robots" content="noindex">
     <title>개인정보처리방침 - 오늘 뭐 먹지?</title>
     <style>
         body { font-family: sans-serif; line-height: 1.6; padding: 20px; max-width: 800px; margin: 0 auto; color: #333; }
