Correct base URL to Cloudflare Pages domain for SEO

--- a/privacy.html
+++ b/privacy.html
@@ -21,9 +21,9 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://gyeongmin100.github.io/product-builder-lecture/privacy.html" />
+    <link rel="canonical" href="https://product-builder-lecture-1eu.pages.dev/privacy.html" />
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://gyeongmin100.github.io/product-builder-lecture/privacy.html">
+    <meta property="og:url" content="https://product-builder-lecture-1eu.pages.dev/privacy.html">
     <meta property="og:title" content="개인정보처리방침 - 오늘 뭐 먹지?">
     <meta name="robots" content="noindex">
     <title>개인정보처리방침 - 오늘 뭐 먹지?</title>
