--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <title>오늘 뭐 먹지? | 점심 저녁 메뉴 추천 & 랜덤 음식 결정</title>
   <meta name="description" content="결정 장애 해결! 오늘 점심, 저녁 메뉴가 고민될 때 AI가 한식, 중식, 일식, 양식, 야식 중에서 딱 맞는 메뉴를 랜덤으로 추천해 드립니다.">
   <meta name="keywords" content="점심메뉴추천, 저녁메뉴추천, 오늘뭐먹지, 랜덤메뉴, 음식추천, AI메뉴추천, 결정장애, 식사메뉴, 혼밥메뉴, 야식추천">
-  <link rel="canonical" href="https://gyeongmin100.github.io/product-builder-lecture/" />
+  <link rel="canonical" href="https://product-builder-lecture-1eu.pages.dev/" />
 
   <!-- SEO: Open Graph (Facebook, KakaoTalk) -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gyeongmin100.github.io/product-builder-lecture/">
+  <meta property="og:url" content="https://product-builder-lecture-1eu.pages.dev/">
   <meta property="og:title" content="오늘 뭐 먹지? | 점심 저녁 메뉴 추천 & 랜덤 음식 결정">
   <meta property="og:description" content="매일 먹는 밥, 고민하지 마세요. 클릭 한 번으로 한식, 중식, 일식, 양식, 야식 메뉴를 랜덤 추천해드립니다.">
-  <meta property="og:image" content="https://gyeongmin100.github.io/product-builder-lecture/favicon.svg">
+  <meta property="og:image" content="https://product-builder-lecture-1eu.pages.dev/favicon.svg">
   <meta property="og:locale" content="ko_KR">
   <meta property="og:site_name" content="오늘 뭐 먹지?">
 
@@ -42,7 +42,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="오늘 뭐 먹지? | 메뉴 고민 끝!">
   <meta name="twitter:description" content="클릭 한 번으로 오늘의 식사 메뉴를 정해드립니다.">
-  <meta name="twitter:image" content="https://gyeongmin100.github.io/product-builder-lecture/favicon.svg">
+  <meta name="twitter:image" content="https://product-builder-lecture-1eu.pages.dev/favicon.svg">
 
   <!-- SEO: Structured Data (JSON-LD) -->
   <script type="application/ld+json">
@@ -50,7 +50,7 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "오늘 뭐 먹지?",
-    "url": "https://gyeongmin100.github.io/product-builder-lecture/",
+    "url": "https://product-builder-lecture-1eu.pages.dev/",
     "description": "AI 기반 점심 및 저녁 메뉴 랜덤 추천 서비스",
     "keywords": "점심메뉴, 저녁메뉴, 랜덤추천, 음식월드컵",
     "author": {
